html_bidict/style: Give fixed width to the column of origin terms, and allow them to wrap (earlier a very long original entry would ruin the table layout).

--- a/dgproc/dg/sieve/html_bidict_extras/style/igloo.css
+++ b/dgproc/dg/sieve/html_bidict_extras/style/igloo.css
@@ -46,7 +46,7 @@ td.bd-oterm {
     vertical-align: top;
     padding-left: 0.5em;
     padding-right: 1.5em;
-    width: 1em;
+    width: 10em;
 
     border-color: lightsteelblue;
     border-width: thin;
@@ -57,7 +57,6 @@ td.bd-oterm {
 p.bd-otline {
     margin-top: 0.1em;
     margin-bottom: 0.1em;
-    white-space: nowrap;
 }
 
 /* target terms column */
